updated FileVerificationTests.java